src/test/ui/macros/issue-68060.stderr
error: attribute should be applied to a function
  --> $DIR/issue-68060.rs:4:13
   |
LL |             #[target_feature(enable = "")]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |             |_| (),
   |             ------ not a function

error: the feature named `` is not valid for this target
  --> $DIR/issue-68060.rs:4:30
   |
LL |             #[target_feature(enable = "")]
   |                              ^^^^^^^^^^^ `` is not valid for this target

error[E0737]: `#[track_caller]` requires Rust ABI
  --> $DIR/issue-68060.rs:8:13
   |
LL |             #[track_caller]
   |             ^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0737`.
